feat: openapi documentation
