# app/notes/handler.go
@@ -19,6 +19,7 @@ func Index(c echo.Context) error {
 
 // @Summary List your notes
 // @Description  Perform a Full Text Search on your notes. Ordered by most recent update.
+// @Tags notes
 // @Accept       json, application/x-www-form-urlencoded
 // @Produce      json, text/html
 // @Param        search  query string false "FTS query"
@@ -42,6 +43,15 @@ func GetNotes(c echo.Context) error {
 
 }
 
+// @Summary Create a notes
+// @Description  Save a note to the database and return the ID
+// @Tags notes
+// @Accept       json, application/x-www-form-urlencoded
+// @Produce      json, text/html
+// @Param        content  body string  true "The content of the note"
+// @Success      200  {array}   notes.Note
+// @Failure      422  {object}  notes.Note
+// @Router       /notes [post]
 func PostNotes(c echo.Context) error {
 	var validInput noteSerializer
 	err := c.Bind(&validInput)
@@ -60,10 +70,17 @@ func PostNotes(c echo.Context) error {
 	return c.Render(http.StatusOK, "note", note)
 }
 
-// Handler PUT request.
-// Default behavior is just to update the record in the DB and return 200
-// but if the content of the note is empty then it's treated as a DELETE
-// request and return 204.
+// @Summary Update or delete a notes
+// @Description  Default behavior is just to update the record in the DB and return 200 but if the content of the note is empty then it's treated as a DELETE request and return 204.
+// @Tags notes
+// @Accept       json, application/x-www-form-urlencoded
+// @Produce      json, text/html
+// @Param        id  path int  true "The note identifier"
+// @Param        content  body string  true "The content of the note"
+// @Success      200  {array}   notes.Note
+// @Success      204  ""
+// @Failure      422  {object}  notes.Note
+// @Router       /notes/{id} [put]
 func PutNote(c echo.Context) error {
 
 	var validInput noteSerializer
@@ -79,6 +96,15 @@ func PutNote(c echo.Context) error {
 	return handleUpdate(c, validInput)
 }
 
+// @Summary Delete a notes
+// @Description  Remove a record from the database
+// @Tags notes
+// @Accept       json, application/x-www-form-urlencoded
+// @Produce      json, text/html
+// @Param        id  path int  true "The note identifier"
+// @Success      204  ""
+// @Failure      422  {object}  notes.Note
+// @Router       /notes/{id} [delete]
 func DelNote(c echo.Context) error {
 	var validInput noteSerializer
 	err := c.Bind(&validInput)
